--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "url": "sindresorhus.com"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
-    "test": "xo && ava"
+    "test": "xo && ava",
+    "bench": "matcha bench.js"
   },
   "files": [
     "index.js"
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "ava": "*",
+    "matcha": "^0.7.0",
     "xo": "*"
   }
 }
