--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
-		"url": "sindresorhus.com"
+		"url": "https://sindresorhus.com"
 	},
 	"engines": {
-		"node": ">=8"
+		"node": ">=10"
 	},
 	"scripts": {
 		"test": "xo && ava && tsd",
@@ -38,12 +38,17 @@
 		"minimatch"
 	],
 	"dependencies": {
-		"escape-string-regexp": "^2.0.0"
+		"escape-string-regexp": "^4.0.0"
 	},
 	"devDependencies": {
 		"ava": "^2.4.0",
 		"matcha": "^0.7.0",
 		"tsd": "^0.11.0",
-		"xo": "^0.25.3"
+		"xo": "^0.30.0"
+	},
+	"xo": {
+		"rules": {
+			"@typescript-eslint/member-ordering": "off"
+		}
 	}
 }
